// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BidDialog closed 1`] = `""`;

exports[`Storyshots BidDialog default 1`] = `
<div
  aria-labelledby="form-dialog-title"
  className="MuiModal-root MuiDialog-root"
  role="dialog"
>
  <div
    aria-hidden="true"
    className="MuiBackdrop-root"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
  />
  <div
    className="MuiPaper-root MuiPaper-elevation24 MuiPaper-rounded MuiDialog-paper MuiDialog-paperWidthSm"
    role="document"
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
    tabIndex="-1"
  >
    <div
      className="MuiDialogTitle-root"
      id="form-dialog-title"
    >
      <h2
        className="MuiTypography-root MuiTypography-title"
      >
        Submit Bid
      </h2>
    </div>
    <div
      className="MuiDialogContent-root BidDialog-root"
    >
      <div
        className="BidDialog-inputRow"
      >
        <h1
          className="MuiTypography-root MuiTypography-headline BidDialog-inputLabel"
        >
          Lake Valentine sit
        </h1>
        <div
          className="MuiFormControl-root BidDialog-currencyInput"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="MuiInput-root MuiInput-formControl MuiInput-underline"
          >
            <input
              aria-invalid={false}
              aria-required={false}
              className="MuiInput-input"
              disabled={false}
              id="bid-amount"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseUp={[Function]}
              type="text"
              value="$120.78"
            />
            <div
              className="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-flat CurrencyInputField-stepButton"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-flat CurrencyInputField-stepButton"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <p
        className="MuiTypography-root MuiTypography-subheading MuiDialogContentText-root"
      />
    </div>
    <div
      className="MuiDialogActions-root"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-flat MuiDialogActions-action"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-textPrimary MuiButton-flat MuiButton-flatPrimary MuiDialogActions-action"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Submit
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots BidDialog loading 1`] = `
<div
  aria-labelledby="form-dialog-title"
  className="MuiModal-root MuiDialog-root"
  role="dialog"
>
  <div
    aria-hidden="true"
    className="MuiBackdrop-root"
    onClick={[Function]}
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
  />
  <div
    className="MuiPaper-root MuiPaper-elevation24 MuiPaper-rounded MuiDialog-paper MuiDialog-paperWidthSm"
    role="document"
    style={
      Object {
        "opacity": 1,
        "willChange": "opacity",
      }
    }
    tabIndex="-1"
  >
    <div
      className="MuiDialogTitle-root"
      id="form-dialog-title"
    >
      <h2
        className="MuiTypography-root MuiTypography-title"
      >
        Submit Bid
      </h2>
    </div>
    <div
      className="MuiDialogContent-root BidDialog-root"
    >
      <div
        className="BidDialog-inputRow"
      >
        <h1
          className="MuiTypography-root MuiTypography-headline BidDialog-inputLabel"
        >
          Lake Valentine sit
        </h1>
        <div
          className="MuiFormControl-root BidDialog-currencyInput"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="MuiInput-root MuiInput-formControl MuiInput-underline"
          >
            <input
              aria-invalid={false}
              aria-required={false}
              className="MuiInput-input"
              disabled={false}
              id="bid-amount"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseUp={[Function]}
              type="text"
              value="$120.78"
            />
            <div
              className="MuiInputAdornment-root MuiInputAdornment-positionEnd"
            >
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-flat CurrencyInputField-stepButton"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
              <button
                className="MuiButtonBase-root MuiButton-root MuiButton-flat CurrencyInputField-stepButton"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    className="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <path
                        d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <p
        className="MuiTypography-root MuiTypography-subheading MuiDialogContentText-root"
      />
    </div>
    <div
      className="MuiDialogActions-root"
    >
      <button
        className="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-flat MuiButton-disabled MuiDialogActions-action"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Cancel
        </span>
      </button>
      <button
        className="MuiButtonBase-root MuiButtonBase-disabled MuiButton-root MuiButton-textPrimary MuiButton-flat MuiButton-flatPrimary MuiButton-disabled MuiDialogActions-action"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          Submit
        </span>
      </button>
      <div
        className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate BidDialog-buttonProgress MuiDialogActions-action"
        role="progressbar"
        style={
          Object {
            "height": 32,
            "width": 32,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="0 0 50 50"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={25}
            cy={25}
            fill="none"
            r={20}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
